--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,18 @@
 <div class="container">
   <h1>Components</h1>
+
+  <app-post-form
+    (onAdd)="updatePosts($event)"
+  >
+  </app-post-form>
+  <hr />
+  <app-post
+    *ngFor="let post of posts"
+    [post]="post"
+  >
+    <small *ngIf="post.title.length > 10; else short">Пост длинный</small>
+    <ng-template #short>
+      <small>Короткий пост</small>
+    </ng-template>
+  </app-post>
 </div>
